# OpenCollect

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  server.js
backend/: __init__.py
backend/app/: __init__.py  auth.py  main.py  rate_limit.py
backend/app/api/: router.py
backend/app/core/: config.py
backend/app/media/: __init__.py  proxy.py  video_urls.py
backend/app/store/: json_store.py  models.py
backend/app/sync/: __init__.py  manager.py  s3_client.py
backend/app/xhs/: __init__.py  parser.py
backend/tests/: test_api.py  test_auth.py  test_config.py  test_json_store.py  test_s3_client.py  test_sync_manager.py  test_xhs_parser.py
docs/: BACKEND_STORAGE_SYNC_DESIGN.md  ITERATION_LOG.md  P6_LAUNCH_PLAN.md  ROADMAP.md
docs/examples/: collections.example.json
frontend-tests/: view-model.test.mjs
public/: app.js  index.html  login.html  request-security.js  styles.css  view-model.js
